# AndiOnboard

./: README.md
PythonProject/: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
PythonProject/qdrant_storage/: raft_state.json
next-app_/app/: globals.css  layout.tsx  package-lock.json  package.json  page.tsx
next-app_/app/components/: AddtoCart.tsx  ProductCard.tsx  ThemeController.tsx
next-app_/app/users/: page.tsx
