[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "generativeai>=0.0.1",
    "google-cloud-aiplatform>=1.148.1",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.6",
    "inngest>=0.4.22",
    "llama-index-core>=0.14.16",
    "llama-index-readers-file>=0.5.6",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "reportlab>=5.0.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
